--- a/index.html
+++ b/index.html
@@ -230,7 +230,14 @@
                     </a>
                 </div>
             </div>
-            
+        <div class="level-card">
+                    <a href="notepad.html" class="level-link">
+                        <div class="level-number">Level 12</div>
+                        <div class="level-title">Legacy & Migration</div>
+                        <div class="level-description">Reference material for existing systems</div>
+                    </a>
+                </div>
+        </div>
             <div class="navigation-hint">
                 Click on any level card to navigate to its detailed content page
             </div>
