--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
             </div>
         <div class="level-card">
                     <a href="notepad.html" class="level-link">
-                        <div class="level-number">Level 12</div>
-                        <div class="level-title">Legacy & Migration</div>
-                        <div class="level-description">Reference material for existing systems</div>
+                        <div class="level-number">Notepad++</div>
+                        <div class="level-title">online notepad</div>
+                        <div class="level-description">use the this notepad++ for macbook</div>
                     </a>
                 </div>
         </div>
