--- a/index.html
+++ b/index.html
@@ -236,13 +236,48 @@
                         <div class="level-description">Agents can perform all the applications </div>
                     </a>
                 </div>
+             <div class="level-card">
+                    <a href="level_14.html" class="level-link">
+                        <div class="level-number">Level 13</div>
+                        <div class="level-title"> Text Cleaning  </div>
+                        <div class="level-description"> nltk text cleaning </div>
+                    </a>
+                </div>
+             <div class="level-card">
+                    <a href="level_15.html" class="level-link">
+                        <div class="level-number"> NLTK </div>
+                        <div class="level-title"> Text Cleaning  </div>
+                        <div class="level-description"> nltk text cleaning </div>
+                    </a>
+                </div>
+            <div class="level-card">
+                    <a href="level_16.html" class="level-link">
+                        <div class="level-number">Pytorch</div>
+                        <div class="level-title"> pytorch  </div>
+                        <div class="level-description"> gen si </div>
+                    </a>
+                </div>
+               <div class="level-card">
+                    <a href="level_17.html" class="level-link">
+                        <div class="level-number">evalution of gen ai</div>
+                        <div class="level-title"> evalution of gen ai  </div>
+                        <div class="level-description"> rnn cnn and ann </div>
+                    </a>
+                </div>
+                <div class="level-card">
+                    <a href="level_18.html" class="level-link">
+                        <div class="level-number">Level 13</div>
+                        <div class="level-title"> Text Cleaning  </div>
+                        <div class="level-description"> nltk text cleaning </div>
+                    </a>
+                </div>
         <div class="level-card">
                     <a href="notepad.html" class="level-link">
                         <div class="level-number">Notepad++</div>
                         <div class="level-title">online notepad</div>
                         <div class="level-description">use the this notepad++ for macbook</div>
                     </a>
-                </div>
+        </div>
         </div>
             <div class="navigation-hint">
                 Click on any level card to navigate to its detailed content page
