--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
                 </div>
                 <div class="level-card">
                     <a href="level_18.html" class="level-link">
-                        <div class="level-number">Level 13</div>
-                        <div class="level-title"> Text Cleaning  </div>
-                        <div class="level-description"> nltk text cleaning </div>
+                        <div class="level-number">Level 18</div>
+                        <div class="level-title"> Summary </div>
+                        <div class="level-description"> gen ai summary </div>
                     </a>
                 </div>
         <div class="level-card">
