--- a/index.html
+++ b/index.html
@@ -278,6 +278,86 @@
                         <div class="level-description">use the this notepad++ for macbook</div>
                     </a>
         </div>
+        <div class="level-card">
+    <a href="level_01.html" class="level-link">
+        <div class="level-number">Level 01</div>
+        <div class="level-title"> Python & ML Basics </div>
+        <div class="level-description">Build core Python, math, and machine learning foundation.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_02.html" class="level-link">
+        <div class="level-number">Level 02</div>
+        <div class="level-title"> PyTorch Fundamentals </div>
+        <div class="level-description">Learn tensors, autograd, and basic model training in PyTorch.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_03.html" class="level-link">
+        <div class="level-number">Level 03</div>
+        <div class="level-title"> Deep Learning Models </div>
+        <div class="level-description">Train neural networks with layers, activations, and optimizers.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_04.html" class="level-link">
+        <div class="level-number">Level 04</div>
+        <div class="level-title"> Sequence Models (RNN, LSTM) </div>
+        <div class="level-description">Master RNNs, LSTMs, and text-based sequence modeling.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_05.html" class="level-link">
+        <div class="level-number">Level 05</div>
+        <div class="level-title"> Transformers Basics </div>
+        <div class="level-description">Understand attention and transformer architecture fundamentals.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_06.html" class="level-link">
+        <div class="level-number">Level 06</div>
+        <div class="level-title"> BERT and NLP </div>
+        <div class="level-description">Learn BERT, tokenization, and fine-tuning for NLP tasks.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_07.html" class="level-link">
+        <div class="level-number">Level 07</div>
+        <div class="level-title"> Generative AI Models </div>
+        <div class="level-description">Build generative text models using GPT and T5 architectures.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_08.html" class="level-link">
+        <div class="level-number">Level 08</div>
+        <div class="level-title"> Vision, Multimodal & Advanced GenAI </div>
+        <div class="level-description">Explore text-to-image, vision-language, and multimodal models.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_09.html" class="level-link">
+        <div class="level-number">Level 09</div>
+        <div class="level-title"> Deployment & Production </div>
+        <div class="level-description">Deploy models with APIs, Docker, and cloud tools like AWS.</div>
+    </a>
+</div>
+
+<div class="level-card">
+    <a href="level_10.html" class="level-link">
+        <div class="level-number">Level 10</div>
+        <div class="level-title"> Responsible AI & Ethics </div>
+        <div class="level-description">Understand model bias, fairness, safety, and governance.</div>
+    </a>
+</div>
+
         </div>
             <div class="navigation-hint">
                 Click on any level card to navigate to its detailed content page
