--- a/index.html
+++ b/index.html
@@ -279,81 +279,71 @@
                     </a>
         </div>
         <div class="level-card">
-    <a href="level_01.html" class="level-link">
-        <div class="level-number">Level 01</div>
-        <div class="level-title"> Python & ML Basics </div>
+    <a href="level_python_basics.html" class="level-link">
+        <div class="level-title">Python & ML Basics</div>
         <div class="level-description">Build core Python, math, and machine learning foundation.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_02.html" class="level-link">
-        <div class="level-number">Level 02</div>
-        <div class="level-title"> PyTorch Fundamentals </div>
+    <a href="level_pytorch_fundamentals.html" class="level-link">
+        <div class="level-title">PyTorch Fundamentals</div>
         <div class="level-description">Learn tensors, autograd, and basic model training in PyTorch.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_03.html" class="level-link">
-        <div class="level-number">Level 03</div>
-        <div class="level-title"> Deep Learning Models </div>
+    <a href="level_deep_learning.html" class="level-link">
+        <div class="level-title">Deep Learning Models</div>
         <div class="level-description">Train neural networks with layers, activations, and optimizers.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_04.html" class="level-link">
-        <div class="level-number">Level 04</div>
-        <div class="level-title"> Sequence Models (RNN, LSTM) </div>
+    <a href="level_sequence_models.html" class="level-link">
+        <div class="level-title">Sequence Models (RNN, LSTM)</div>
         <div class="level-description">Master RNNs, LSTMs, and text-based sequence modeling.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_05.html" class="level-link">
-        <div class="level-number">Level 05</div>
-        <div class="level-title"> Transformers Basics </div>
+    <a href="level_transformers.html" class="level-link">
+        <div class="level-title">Transformers Basics</div>
         <div class="level-description">Understand attention and transformer architecture fundamentals.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_06.html" class="level-link">
-        <div class="level-number">Level 06</div>
-        <div class="level-title"> BERT and NLP </div>
+    <a href="level_bert_nlp.html" class="level-link">
+        <div class="level-title">BERT and NLP</div>
         <div class="level-description">Learn BERT, tokenization, and fine-tuning for NLP tasks.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_07.html" class="level-link">
-        <div class="level-number">Level 07</div>
-        <div class="level-title"> Generative AI Models </div>
+    <a href="level_generative_models.html" class="level-link">
+        <div class="level-title">Generative AI Models</div>
         <div class="level-description">Build generative text models using GPT and T5 architectures.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_08.html" class="level-link">
-        <div class="level-number">Level 08</div>
-        <div class="level-title"> Vision, Multimodal & Advanced GenAI </div>
+    <a href="level_multimodal.html" class="level-link">
+        <div class="level-title">Vision, Multimodal & Advanced GenAI</div>
         <div class="level-description">Explore text-to-image, vision-language, and multimodal models.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_09.html" class="level-link">
-        <div class="level-number">Level 09</div>
-        <div class="level-title"> Deployment & Production </div>
+    <a href="level_deployment.html" class="level-link">
+        <div class="level-title">Deployment & Production</div>
         <div class="level-description">Deploy models with APIs, Docker, and cloud tools like AWS.</div>
     </a>
 </div>
 
 <div class="level-card">
-    <a href="level_10.html" class="level-link">
-        <div class="level-number">Level 10</div>
-        <div class="level-title"> Responsible AI & Ethics </div>
+    <a href="level_responsible_ai.html" class="level-link">
+        <div class="level-title">Responsible AI & Ethics</div>
         <div class="level-description">Understand model bias, fairness, safety, and governance.</div>
     </a>
 </div>
